--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
+    "hono-rate-limit": "^1.0.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
