--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ DB_NAME=chat-notif-postgres
 DATABASE_URL=postgresql://youruser:yourpassword@localhost:5432/chat-notif-postgres
 
 FRONTEND_URL=http://localhost:3000
+
+CLIENT_SECRET=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
+CLIENT_ID=35906524817-s2ltgeone5r9ltltp6puiupfk07llkbu.apps.googleusercontent.com
