--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "google-auth-library": "^10.3.0",
     "hono": "^4.9.8",
     "hono-rate-limit": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
