--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "hono-rate-limit": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
