--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "google-auth-library": "^10.3.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cookie": "^1.0.0",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5"
