--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "dev": "bun --watch run src/index.ts "
   },
   "dependencies": {
+    "@hono/node-server": "^1.19.5",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
