--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,15 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,                
+    "types": ["node"]                    
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules/drizzle-orm/mysql-core",
+    "node_modules/drizzle-orm/sqlite-core",
+    "node_modules/drizzle-orm/singlestore-core",
+    "node_modules/drizzle-orm/gel-core"
+  ]
 }
